The starting point

--- a/src/client/PartsClient/PartsClient/PartsClient.csproj
+++ b/src/client/PartsClient/PartsClient/PartsClient.csproj
@@ -49,6 +49,10 @@
 	</ItemGroup>
 
 	<ItemGroup>
+	  <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
+	</ItemGroup>
+
+	<ItemGroup>
 	  <MauiXaml Update="Pages\AddPartPage.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
